hw06/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines expr '\n'
    2      | lines '\n'
    3      | /* empty */
    4      | error '\n'

    5 expr: expr '+' expr
    6     | expr '-' expr
    7     | expr '*' expr
    8     | expr '/' expr
    9     | '(' expr ')'
   10     | '-' expr
   11     | expr '|' expr
   12     | expr '^' expr
   13     | expr '&' expr
   14     | expr '%' expr
   15     | '~' expr
   16     | number
   17     | exp
   18     | hex

   19 exp: number 'e' number
   20    | number 'e' '-' number

   21 hex: hexTest letterValue
   22    | hexTest NUMBER
   23    | hex NUMBER

   24 hexTest: NUMBER 'x'

   25 letterValue: 'A'
   26            | 'B'
   27            | 'C'
   28            | 'D'
   29            | 'E'
   30            | 'F'
   31            | 'a'
   32            | 'b'
   33            | 'c'
   34            | 'd'
   35            | 'e'
   36            | 'f'

   37 number: NUMBER
   38       | number NUMBER
   39       | '.' NUMBER
   40       | number '.'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 4
'%' (37) 14
'&' (38) 13
'(' (40) 9
')' (41) 9
'*' (42) 7
'+' (43) 5
'-' (45) 6 10 20
'.' (46) 39 40
'/' (47) 8
'A' (65) 25
'B' (66) 26
'C' (67) 27
'D' (68) 28
'E' (69) 29
'F' (70) 30
'^' (94) 12
'a' (97) 31
'b' (98) 32
'c' (99) 33
'd' (100) 34
'e' (101) 19 20 35
'f' (102) 36
'x' (120) 24
'|' (124) 11
'~' (126) 15
error (256) 4
NUMBER (258) 22 23 24 37 38 39
UMINUS (259)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
lines (32)
    on left: 1 2 3 4, on right: 0 1 2
expr (33)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 1 5 6
    7 8 9 10 11 12 13 14 15
exp (34)
    on left: 19 20, on right: 17
hex (35)
    on left: 21 22 23, on right: 18 23
hexTest (36)
    on left: 24, on right: 21 22
letterValue (37)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36, on right: 21
number (38)
    on left: 37 38 39 40, on right: 16 19 20 38 40


state 0

    0 $accept: . lines $end

    error  shift, and go to state 1

    $end    reduce using rule 3 (lines)
    NUMBER  reduce using rule 3 (lines)
    '-'     reduce using rule 3 (lines)
    '~'     reduce using rule 3 (lines)
    '\n'    reduce using rule 3 (lines)
    '('     reduce using rule 3 (lines)
    '.'     reduce using rule 3 (lines)

    lines  go to state 2


state 1

    4 lines: error . '\n'

    '\n'  shift, and go to state 3


state 2

    0 $accept: lines . $end
    1 lines: lines . expr '\n'
    2      | lines . '\n'

    $end    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '\n'    shift, and go to state 8
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 11
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 3

    4 lines: error '\n' .

    $default  reduce using rule 4 (lines)


state 4

    0 $accept: lines $end .

    $default  accept


state 5

   24 hexTest: NUMBER . 'x'
   37 number: NUMBER .

    'x'  shift, and go to state 16

    $default  reduce using rule 37 (number)


state 6

   10 expr: '-' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 17
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 7

   15 expr: '~' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 18
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 8

    2 lines: lines '\n' .

    $default  reduce using rule 2 (lines)


state 9

    9 expr: '(' . expr ')'

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 19
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 10

   39 number: '.' . NUMBER

    NUMBER  shift, and go to state 20


state 11

    1 lines: lines expr . '\n'
    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '|'   shift, and go to state 21
    '^'   shift, and go to state 22
    '&'   shift, and go to state 23
    '+'   shift, and go to state 24
    '-'   shift, and go to state 25
    '*'   shift, and go to state 26
    '/'   shift, and go to state 27
    '%'   shift, and go to state 28
    '\n'  shift, and go to state 29


state 12

   17 expr: exp .

    $default  reduce using rule 17 (expr)


state 13

   18 expr: hex .
   23 hex: hex . NUMBER

    NUMBER  shift, and go to state 30

    $default  reduce using rule 18 (expr)


state 14

   21 hex: hexTest . letterValue
   22    | hexTest . NUMBER

    NUMBER  shift, and go to state 31
    'e'     shift, and go to state 32
    'A'     shift, and go to state 33
    'B'     shift, and go to state 34
    'C'     shift, and go to state 35
    'D'     shift, and go to state 36
    'E'     shift, and go to state 37
    'F'     shift, and go to state 38
    'a'     shift, and go to state 39
    'b'     shift, and go to state 40
    'c'     shift, and go to state 41
    'd'     shift, and go to state 42
    'f'     shift, and go to state 43

    letterValue  go to state 44


state 15

   16 expr: number .
   19 exp: number . 'e' number
   20    | number . 'e' '-' number
   38 number: number . NUMBER
   40       | number . '.'

    NUMBER  shift, and go to state 45
    'e'     shift, and go to state 46
    '.'     shift, and go to state 47

    $default  reduce using rule 16 (expr)


state 16

   24 hexTest: NUMBER 'x' .

    $default  reduce using rule 24 (hexTest)


state 17

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   10     | '-' expr .
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    $default  reduce using rule 10 (expr)


state 18

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   15     | '~' expr .

    $default  reduce using rule 15 (expr)


state 19

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | '(' expr . ')'
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '|'  shift, and go to state 21
    '^'  shift, and go to state 22
    '&'  shift, and go to state 23
    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28
    ')'  shift, and go to state 48


state 20

   39 number: '.' NUMBER .

    $default  reduce using rule 39 (number)


state 21

   11 expr: expr '|' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 49
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 22

   12 expr: expr '^' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 50
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 23

   13 expr: expr '&' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 51
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 24

    5 expr: expr '+' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 52
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 25

    6 expr: expr '-' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 53
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 26

    7 expr: expr '*' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 54
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 27

    8 expr: expr '/' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 55
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 28

   14 expr: expr '%' . expr

    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '~'     shift, and go to state 7
    '('     shift, and go to state 9
    '.'     shift, and go to state 10

    expr     go to state 56
    exp      go to state 12
    hex      go to state 13
    hexTest  go to state 14
    number   go to state 15


state 29

    1 lines: lines expr '\n' .

    $default  reduce using rule 1 (lines)


state 30

   23 hex: hex NUMBER .

    $default  reduce using rule 23 (hex)


state 31

   22 hex: hexTest NUMBER .

    $default  reduce using rule 22 (hex)


state 32

   35 letterValue: 'e' .

    $default  reduce using rule 35 (letterValue)


state 33

   25 letterValue: 'A' .

    $default  reduce using rule 25 (letterValue)


state 34

   26 letterValue: 'B' .

    $default  reduce using rule 26 (letterValue)


state 35

   27 letterValue: 'C' .

    $default  reduce using rule 27 (letterValue)


state 36

   28 letterValue: 'D' .

    $default  reduce using rule 28 (letterValue)


state 37

   29 letterValue: 'E' .

    $default  reduce using rule 29 (letterValue)


state 38

   30 letterValue: 'F' .

    $default  reduce using rule 30 (letterValue)


state 39

   31 letterValue: 'a' .

    $default  reduce using rule 31 (letterValue)


state 40

   32 letterValue: 'b' .

    $default  reduce using rule 32 (letterValue)


state 41

   33 letterValue: 'c' .

    $default  reduce using rule 33 (letterValue)


state 42

   34 letterValue: 'd' .

    $default  reduce using rule 34 (letterValue)


state 43

   36 letterValue: 'f' .

    $default  reduce using rule 36 (letterValue)


state 44

   21 hex: hexTest letterValue .

    $default  reduce using rule 21 (hex)


state 45

   38 number: number NUMBER .

    $default  reduce using rule 38 (number)


state 46

   19 exp: number 'e' . number
   20    | number 'e' . '-' number

    NUMBER  shift, and go to state 57
    '-'     shift, and go to state 58
    '.'     shift, and go to state 10

    number  go to state 59


state 47

   40 number: number '.' .

    $default  reduce using rule 40 (number)


state 48

    9 expr: '(' expr ')' .

    $default  reduce using rule 9 (expr)


state 49

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   11     | expr '|' expr .
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '^'  shift, and go to state 22
    '&'  shift, and go to state 23
    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28

    $default  reduce using rule 11 (expr)


state 50

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   12     | expr '^' expr .
   13     | expr . '&' expr
   14     | expr . '%' expr

    '&'  shift, and go to state 23
    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28

    $default  reduce using rule 12 (expr)


state 51

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   13     | expr '&' expr .
   14     | expr . '%' expr

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28

    $default  reduce using rule 13 (expr)


state 52

    5 expr: expr . '+' expr
    5     | expr '+' expr .
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28

    $default  reduce using rule 5 (expr)


state 53

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    6     | expr '-' expr .
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    '%'  shift, and go to state 28

    $default  reduce using rule 6 (expr)


state 54

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    7     | expr '*' expr .
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    $default  reduce using rule 7 (expr)


state 55

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    8     | expr '/' expr .
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    $default  reduce using rule 8 (expr)


state 56

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   14     | expr '%' expr .

    $default  reduce using rule 14 (expr)


state 57

   37 number: NUMBER .

    $default  reduce using rule 37 (number)


state 58

   20 exp: number 'e' '-' . number

    NUMBER  shift, and go to state 57
    '.'     shift, and go to state 10

    number  go to state 60


state 59

   19 exp: number 'e' number .
   38 number: number . NUMBER
   40       | number . '.'

    NUMBER  shift, and go to state 45
    '.'     shift, and go to state 47

    $default  reduce using rule 19 (exp)


state 60

   20 exp: number 'e' '-' number .
   38 number: number . NUMBER
   40       | number . '.'

    NUMBER  shift, and go to state 45
    '.'     shift, and go to state 47

    $default  reduce using rule 20 (exp)
